--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -8,5 +8,6 @@
         android:showAsAction="never"
         android:title="@string/action_settings"/>
     <item android:id="@+id/action_gotomap" android:title="@string/action_gotomap"></item>
+    <item android:id="@+id/action_gotolist" android:title="@string/action_gotolist"></item>
 
 </menu>
